Prevent layout shift between pages

--- a/frontend/styles/layouts/_default.scss
+++ b/frontend/styles/layouts/_default.scss
@@ -1,3 +1,8 @@
+body {
+	overflow-y: scroll; // Prevents layout shifting when a scrollbar appears
+	margin: 0;
+}
+
 .page {
   .page-hero {
     display: flex;
